Add 0.3b to release notes. Remove implemented feature from todo list.

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,4 @@
 ## OPEN ISSUES AND/OR FEATURE REQUESTS
-
-* Add closing luks volumes capability.
+* Add -v, --verbose and suppress stdout prints when not specified.
 * Graceful error when config file not present.
 * Refactor mount_volumes(). Too large.
-
